# embedded_python

./: .gitignore  changelog.md  conanfile.py  embedded_python.cmake  embedded_python.manifest  embedded_python_tools.py  license.md  pyproject.toml  readme.md
.github/: dependabot.yml
.github/workflows/: black.yml  example.yml  test_package.yml  update_env.py  update_env.yml
core/: conanfile.py  embedded_python-core.cmake  embedded_python-tools.cmake  embedded_python_tools.py
core/test_package/: CMakeLists.txt  conanfile.py  test.py
core/test_package/src/: main.cpp
example/: CMakeLists.txt  conanfile.py  env.txt  readme.md  requirements.txt
example/src/: main.cpp
test_package/: CMakeLists.txt  conanfile.py
test_package/envs/: baseline_test.py  nbconvert.txt  numpy_test.py  pytest.txt
test_package/nbconvert/: requirements.txt  test.py
test_package/nbconvert/env/: darwin.txt  linux.txt  win32.txt
test_package/numpy/: requirements.txt  test.py
test_package/numpy/env/: darwin.txt  linux.txt  win32.txt
test_package/pylake/: requirements.txt  test.py
test_package/pylake/env/: darwin.txt  linux.txt  win32.txt
